--- a/Matrices and Linear Transformation.ipynb
+++ b/Matrices and Linear Transformation.ipynb
@@ -12,6 +12,8 @@
    },
    "source": [
     "# Matrices and Linear Transformation\n",
+    "* [上課影片](http://ocw.aca.ntu.edu.tw/ntu-ocw/index.php/ocw/cou/102S207/7/V/1?v=ntu)\n",
+    "* [上課講義](http://ocw.aca.ntu.edu.tw/ocw_files/102S207/102S207_CS07L01.pdf)\n",
     "* Linear Transformatio 的示意圖\n",
     "![image.png ](attachment:image.png)\n",
     "* $v \\in R^p$ , B is $n*p$ matrix and A is $m*n$ matrix\n",
