--- a/Invertibility and Elmentary Matrices.ipynb
+++ b/Invertibility and Elmentary Matrices.ipynb
@@ -17,7 +17,8 @@
    },
    "source": [
     "## 重要定理\n",
-    "* If $n*n$ $A$ is <span style=\"color:red\">invertiabl</span> that exists and $n*n$ matrix $B$ , $AB=BA=I_n$"
+    "* If $n*n$ $A$ is <span style=\"color:red\">invertiable</span> that exists and $n*n$ matrix $B$ , $AB=BA=I_n$\n",
+    "* If $A$ is invertiable then the $rank$ of $A$ is $N$"
    ]
   },
   {
